--- a/reportMaster2/3-Biblio.tex
+++ b/reportMaster2/3-Biblio.tex
@@ -158,7 +158,7 @@ auto st = st1+st2;
 \end{figure}
 Notons que la forme de ces arbre n'a pas été étudiée pour l'obtention des performances, mais il est tout à fait possible que cette forme les influencent car elle influe sur l'ordre de calcul des opérations dans le stencil. 
 
-En supposant que certaines formes sont plus performantes que d'autres, il est primordial de pouvoir alors spécialiser le code en ayant en interne à la bibliothèque des fonctions optimisées pour certains types de motifs. Cela est rendu possible en \textsf{C++} grâce à la possibilité de redéfinir des classes et méthodes plusieurs fois avec des paramètres de template différents : la spécialisation partielle \cite{Web1}. En pratique il est même possible d'avoir des template à l'intérieur de template, ce qui permet un déclenchement retardé de la spécialisation d'une classe par rapport à ses méthodes. Cette méthode est notamment utilisée pour éviter à l'utilisateur de préciser le type dans les coefficients variables, celui-ci est propagé à la méthode lors de la construction des tableaux de coefficients (cf l'extrait de code \ref{lst:tab_io}). Cette méthode est relativement complexe, même pour le compilateur, d'où l'introduction d'une syntaxe peu compréhensible \cite{Web2}. En revanche l'utilisateur doit le préciser dans le cas des coefficients constants. Cela est redondant pour lui -- il passe l'information deux fois --, mais aussi pour le DSEL car tout le code doit alors être dupliqué, et possiblement de manière non statique ! En effet il est alors nécessaire de stocker la valeur du coefficient dans l'objet-même donc tous les autres objets (tels qu'une opération) l'utilisant doivent avoir un lien \emph{a-un} vers lui, qui est a priori dynamique. En pratique le compilateur est parfois capable de faire une telle optimisation, mais cela n'est pas garanti, et n'a pas été vérifié.
+En supposant que certaines formes sont plus performantes que d'autres, il est primordial de pouvoir alors spécialiser le code en ayant en interne à la bibliothèque des fonctions optimisées pour certains types de motifs. Cela est rendu possible en \textsf{C++} grâce à la possibilité de redéfinir des classes et méthodes plusieurs fois avec des paramètres de template différents : la spécialisation partielle \cite{Web1}. En pratique il est même possible d'avoir des template à l'intérieur de template, ce qui permet un déclenchement retardé de la spécialisation d'une classe par rapport à ses méthodes. Cette méthode est notamment utilisée pour éviter à l'utilisateur de préciser le type dans les coefficients variables, celui-ci est propagé à la méthode lors de la construction des tableaux de coefficients (cf l'extrait de code \ref{lst:tab_io}). La spécialisation partielle \emph{retardée} est relativement complexe, même pour le compilateur, d'où l'introduction d'une syntaxe peu compréhensible \cite{Web2}. En revanche l'utilisateur doit préciser le type dans le cas des coefficients constants. Cela est redondant pour lui -- il passe l'information deux fois --, mais aussi pour le DSEL car tout le code doit alors être dupliqué, et possiblement de manière non statique ! En effet il est alors nécessaire de stocker la valeur du coefficient dans l'objet-même donc tous les autres objets (tels qu'une opération) l'utilisant doivent avoir un lien \emph{a-un} vers lui, qui est a priori dynamique. En pratique le compilateur est parfois capable de faire une telle optimisation, mais cela n'est pas garanti, et n'a pas été vérifié.
 
 
 \subsection{Calcul statique des paramètres de tuilage}
@@ -181,7 +181,7 @@ Le DSEL développé est une preuve de concept, ainsi nous savons maintenant comm
 
 Le front-end doit offrir la possibilité à l'utilisateur de décrire la plupart des problèmes utilisant des stencils. À ce titre il est nécessaire de rajouter la possibilité de spécialiser la fonction d'application d'un coefficient sur un élément, représentée par le symbole $\otimes$ défini à la section \ref{sec:obj_sem}. En effet cela permettrait non seulement de gérer des types plus complexes que les entiers ou les flottants (par exemple des matrices ou des complexes), mais aussi de traiter des problèmes non linéaires (par exemple la mise au carré des éléments d'une grille, se faisant par un stencil à un seul point donc). Le rajout d'une telle fonction est très simple, il suffit de la mettre en paramètre du template du coefficient voulu (à la suite des indices de décalage). De même il serait envisageable de pouvoir modifier l'opérateur de réduction $\oplus$, mais ce cas est moins utile et moins intuitif de manière sémantique. En effet le plus simple serait de la rajouter en paramètre du template contenant les tableaux d'entrées du stencil et fonctions associées, mais cet objet deviendrait alors un objet \og fourre-tout \fg~ sans véritable sens. 
 
-Par ailleurs les calculs de stencils sont souvent chaînés les uns aux autres : le tableau de sortie de l'application d'un stencil est le tableau d'entrée du stencil suivant. Ces traitements successifs ne devraient pas obliger l'utilisateur à redéfinir des nouveaux tableaux d'entrées et sorties pour chaque stencil. Il serait plus simple de pouvoir créer une unique opération pour toute la chaîne de stencils, comme dans le code \ref{lst:agreg1_stencil} suivant. Du point de vue l'implantation, il est alors nécessaire de prévoir des communications de zones fantômes entre les warp entre l'application de chaque stencil -- si le tuilage est utilisé --, ce qui est une difficulté technique relativement conséquente.
+Par ailleurs les calculs de stencils sont souvent chaînés les uns aux autres : le tableau de sortie de l'application d'un stencil est le tableau d'entrée du stencil suivant. Ces traitements successifs ne devraient pas obliger l'utilisateur à redéfinir des nouveaux tableaux d'entrées et sorties pour chaque stencil. Il serait plus simple de pouvoir créer une unique opération pour toute la chaîne de stencils, comme dans le code \ref{lst:agreg1_stencil} suivant. Du point de vue l'implantation et si le tuilage est utilisé, il est alors nécessaire de prévoir des communications de zones fantômes entre les warp entre l'application de chaque stencil ou alors d'utiliser la technique présentée dans la section suivante.
 
 \begin{listing}[H]
 \caption{Exemple de syntaxe pour le chaînage de plusieurs stencils sur une même entrée.}
@@ -211,12 +211,16 @@ Une telle sémantique nécessite la vérification poussée des tableaux en jeux,
 
 
 \subsection{Améliorations du back-end}
+\label{sec:amelior_backend}
 
-Dans le cas du calcul classique de Jacobi en deux dimensions (qui peut servir notamment à flouter des images), le même stencil est appliqué un certains nombre de fois d'affilée. Or puisque les modifications ne sont pas faites en place, cela nécessite beaucoup de communications, qu'il est possible de diminuer en effectuant en contrepartie quelques calculs supplémentaires redondants (et possiblement en utilisant un peu plus de mémoire). Selon les coûts de communications, les coûts de calculs et la mémoire disponible, cette technique peut fournir un gain substantiel de performances, il s'agit de l'\emph{overlapped tiling} ou tuilage chevauchant. Cette technique est assez développée, et est même encore adaptée à la hiérarchie actuelle des ordinateurs \cite{Art17}. Plus concrètement, ce principe est simplement une extension du tuilage tel que représenté dans la figure \ref{fig:stencil_mtile} au chapitre précédent. Les macro-tuiles se chevauchent puisqu'elles nécessitent une zone fantôme qui se trouve chez leurs voisines. Cette zone est prévue pour une seule application dans le cas de la figure \ref{fig:stencil_mtile}, mais il peut très bien il y en avoir plusieurs, concentriques, dont les éléments calculés sur les bords seront redondants. 
+Dans le cas du calcul classique de Jacobi en deux dimensions (qui peut servir notamment à flouter des images), le même stencil est appliqué un certain nombre de fois d'affilée. Or cela nécessite beaucoup de communications, qu'il est possible de diminuer en effectuant en contrepartie quelques calculs supplémentaires redondants (et en utilisant un peu plus de mémoire). Selon les coûts de communications, les coûts de calculs et la mémoire disponible, cette technique peut fournir un gain substantiel de performances, il s'agit de l'\emph{overlapped tiling} ou tuilage chevauchant. Cette technique est assez développée, et est même encore adaptée à la hiérarchie actuelle des ordinateurs \cite{Art17}. Plus concrètement, ce principe est simplement une extension du tuilage tel que représenté dans la figure \ref{fig:stencil_mtile} au chapitre précédent. Les macro-tuiles se chevauchent puisqu'elles nécessitent une zone fantôme qui se trouve chez leurs voisines. Cette zone est prévue pour une seule application dans le cas de la figure \ref{fig:stencil_mtile}, mais il peut très bien il y en avoir plusieurs, concentriques, dont les éléments calculés sur les bords seront redondants. La figure \ref{fig:stencil_mtile2} représente les calculs effectifs pour deux mises-à-jour consécutive (en place, sans communications ni synchronisation) d'une macro-tuile. La macro-tuile centrale contient les résultats tandis que le premier contour contient les résultats (en vert) de la première application du stencil, utilisés comme fantômes lors de l'application du second stencil. Le contour en pointillés le plus éloigné contient les éléments fantômes (en rouge) de l'application du premier stencil. Les données utilisées par la macro-tuile débordent alors largement sur les macro-tuiles voisines dans le cas d'une si petite taille de macro-tuile. Il convient en pratique d'utiliser le tuilage chevauchant pour l'application de quelques stencils seulement (moins d'une dizaine) pour des tuiles de l'ordre de la centaine d'éléments dans chaque dimension.
 
---> mettre une figure ...
+\begin{figure}[!h]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=4cm}}]{figure}[\FBwidth]
+{\caption{Application d'un stencil en place deux fois de suite sur la macro-tuile centrale. En rouge les éléments fantômes du premier stencil, en vert ceux du second.}\label{fig:stencil_mtile2}}
+{\input{tikz5.tex}}
+\end{figure}
 
+Pour appliquer cette technique, il faut toutefois savoir à l'avance combien de fois le stencil sera itéré, cela est possible avec la syntaxe proposée pour le chaînage de stencils, mais cela n'est pas possible pour le cas général où une nouvelle syntaxe est alors nécessaire (par exemple en intercalant le nombre d'itérations dans la syntaxe présentée dans le code \ref{lst:agreg1_stencil}). 
 
-Forme des blocs : Diamond Tiling stencil \cite{Art16}
-
-
+Une nouvelles fois c'est la spécialisation partielle qui permettrait de mettre en œuvre le déclenchement automatique de l'utilisation de cette technique. C'est aussi par la spécialisation partielle que pourrait être choisie la forme la plus adaptée des blocs pour le tuilage. 
